compilador/Test/Cases/should-fail/test_propios_Err_Type_5.pcf
let tst : Nat = succ + 5